--- a/resources.qrc
+++ b/resources.qrc
@@ -10,5 +10,6 @@
         <file>Assets/ram_icon.png</file>
         <file>Assets/gpu_icon.png</file>
         <file>Assets/cpu_icon.png</file>
+        <file>Assets/refresh.png</file>
     </qresource>
 </RCC>
