--- a/Widgets/Benchmark/benchmarkwidget.ui
+++ b/Widgets/Benchmark/benchmarkwidget.ui
@@ -126,6 +126,25 @@ QCheckBox:hover {
             </spacer>
            </item>
            <item>
+            <widget class="QPushButton" name="oyun_modu_buton">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>130</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>Oyun Modu</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QPushButton" name="testi_baslat_buton">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
